--- a/client/css/juhee.css
+++ b/client/css/juhee.css
@@ -134,26 +134,29 @@ body {
 }
 .recommend_products_slide {
   width: 249px;
+  position: relative;
 }
 .product_img_container {
   height: 320px;
-  position: relative;
 }
 .product_img_container img{
   width: 100%;
   height: 100%;
   object-fit: cover;
-  /* vertical-align: middle; */
-  /* transition: all 0.5s ease-in-out 0s; */
 }
-.product_img_container button {
+.btn_recommend_products {
   position: absolute;
-  bottom: 17px;
+  top: 258px;
   right: 15px;
   width: 45px;
   height: 45px;
-  overflow: hidden;
-  clip-path: circle(50%);
+  outline-offset: 3px;
+  background-color: transparent;
+}
+.btn_recommend_products img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .product_info {
   padding-top: 16px;
