[retac] 명도 대비 고려 폰트 색상 변경 #62

--- a/client/css/cart.css
+++ b/client/css/cart.css
@@ -294,7 +294,7 @@ button.close_btn img {
 .notice {
   font-size: 0.75rem;
   letter-spacing: -0.0125rem;
-  color: var(--gray-400);
+  color: #757575;
   padding-bottom: 5rem;
 }
 
