--- a/client/css/reset.css
+++ b/client/css/reset.css
@@ -53,6 +53,10 @@ button {
   font-family: "Pretendard";
 }
 
+button:disabled {
+  cursor: default;
+}
+
 a {
   color: inherit;
   text-decoration: none;
