[chore] 상품 후기 파트 마크업 수정 #55

--- a/client/css/page_productDetail_dr.css
+++ b/client/css/page_productDetail_dr.css
@@ -71,6 +71,8 @@
 
 .view_by_recent {
   color: #A6A6A6;
+  background: url(../assets/icons/Icon/bar.svg) no-repeat left / 1px;
+  padding-left: 8px;
 }
 
 .product_review_body {
