--- a/client/css/page_productDetail_my.css
+++ b/client/css/page_productDetail_my.css
@@ -96,7 +96,9 @@ body {
   height: 36px;
 }
 
-
+.review_wrapper {
+  margin-top: 52px;
+}
 
 /*------------------------------[header속 모달창: 장바구니 아이콘 밑의 말풍선 구현]------------------------------*/
 .modal_cart { /* 말풍선 전체를 감싸는 영역 */
