--- a/client/css/common.css
+++ b/client/css/common.css
@@ -1,7 +1,7 @@
-@import url(./color.css);
-@import url(./font.css);
-@import url(./a11y.css);
 @import url(./reset.css);
+@import url(./a11y.css);
+@import url(./font.css);
+@import url(./color.css);
 
 .container {
   width: 1050px;
@@ -56,7 +56,8 @@
 }
 
 .popup_img {
-  width: 100%;
+  width: 42px;
+  height: 42px;
 }
 
 .topbtn_wrap {
@@ -72,10 +73,22 @@
 
 .topbtn_list li {
   font-size: 12px;
+  margin-left: 16px;
+  padding-bottom: 10px;
 }
 
 .topbtn_register {
   color: var(--purple);
+}
+
+.topbtn_register::after,
+.topbtn_login::after {
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 13px;
+  border-right: 1px solid var(--gray-bar);
+  margin: 1px 0 0 8px;
 }
 
 .topbtn_cs {
@@ -95,7 +108,7 @@
 .cs_list {
   display: none;
   position: absolute;
-  width: 100px;
+  width: 120px;
   right: 0;
   border: 1px solid #d9d9d9;
   border-radius: 10px;
@@ -120,7 +133,7 @@
   flex-flow: row nowrap;
   align-items: center;
   position: relative;
-  margin-top: 21px;
+  margin-top: 11px;
   height: 60px;
 }
 
@@ -224,12 +237,47 @@
 }
 
 .icon_location {
+  position: relative;
+  display: block;
+  width: 36px;
+  height: 36px;
   background: transparent url("../assets/icons/Icon/location.png") center / 36px
     no-repeat;
 }
 
+.location_box {
+  display: none;
+  position: absolute;
+  width: 300px;
+  height: 100px;
+  background: white;
+  border: 2px solid var(--gray-400);
+  border-radius: 16px;
+  top: 35px;
+  right: 0;
+  z-index: 1;
+  padding: 10px;
+}
+
+.location_text {
+}
+
+.location_button {
+  text-align: center;
+  width: 100%;
+  height: 20px;
+  background-color: var(--purple);
+  color: var(--white);
+  margin-top: 10px;
+  border-radius: 4px;
+}
+
 .icon_location:hover {
   background-image: url("../assets/icons/Icon/location_hover.png");
+}
+
+.icon_location:hover .location_box {
+  display: block;
 }
 
 .icon_heart {
@@ -283,7 +331,8 @@
   display: none;
   position: absolute;
   width: 84px;
-  padding-top: 30px;
+  padding-top: 26px;
+  z-index: 2;
 }
 
 .category:hover ul {
@@ -319,7 +368,7 @@
   width: 16px;
   height: 14px;
   margin-right: 12px;
-  top: -1 px;
+  top: -1px;
 }
 
 .burger {
@@ -502,6 +551,11 @@
   height: 30px;
   margin-left: 20px;
   float: left;
+}
+
+.company_sns img {
+  width: 30px;
+  height: 30px;
 }
 
 .company_sns:first-child {
