--- a/client/css/color.css
+++ b/client/css/color.css
@@ -10,6 +10,7 @@
   --gray-200: #c4c4c4;
   --gray-300: #a6a6a6;
   --gray-400: #898989;
+  /*--gray-400: #777772*/
   --gray-500: #6b6b6b;
   --gray-600: #565656;
   --gray-700: #404040;
