--- a/client/css/common.css
+++ b/client/css/common.css
@@ -1,7 +1,7 @@
-@import url(./color.css);
-@import url(./font.css);
-@import url(./a11y.css);
 @import url(./reset.css);
+@import url(./a11y.css);
+@import url(./font.css);
+@import url(./color.css);
 
 .container {
   width: 1050px;
@@ -241,25 +241,41 @@
   background: transparent url("../assets/icons/Icon/location.png") center / 36px no-repeat;
 }
 
-/*.location_box {
+.location_box {
   display: none;
   position: absolute;
   width: 300px;
-  height: 200px;
+  height: 100px;
   background: white;
-  border: 1px solid black;
-  top: 30px;
+  border: 2px solid var(--gray-400);
+  border-radius: 16px;
+  top: 35px;
   right: 0;
   z-index: 1;
-}*/
+  padding: 10px;
+}
+
+.location_text {
+
+}
+
+.location_button {
+  text-align: center;
+  width: 100%;
+  height: 20px;
+  background-color: var(--purple);
+  color: var(--white);
+  margin-top: 10px;
+  border-radius: 4px;
+}
 
 .icon_location:hover {
   background-image: url("../assets/icons/Icon/location_hover.png");
 }
 
-/*.icon_location:hover .location_box {
+.icon_location:hover .location_box {
   display: block;
-}*/
+}
 
 .icon_heart {
   background: transparent url("../assets/icons/Icon/heart.png") center / 36px no-repeat;
@@ -311,6 +327,7 @@
   position: absolute;
   width: 84px;
   padding-top: 26px;
+  z-index: 2;
 }
 
 .category:hover ul {
