[chore] 전체 병합을 위한 진행상황 업데이트 #55

--- a/client/css/page_productDetail_dr.css
+++ b/client/css/page_productDetail_dr.css
@@ -348,6 +348,8 @@ tr td.is_secret button {
 .is_secret img{
   display: inline-block;
   margin-left: 20px;
+  width: 12px;
+  height: 14px;
 }
 
 td.is_answered {
