--- a/client/css/reset.css
+++ b/client/css/reset.css
@@ -53,6 +53,10 @@ button {
   font-family: "Pretendard";
 }
 
+button:disabled {
+  cursor: default;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -66,7 +70,7 @@ input:focus {
   outline: none;
 }
 
-input[type="text"]:focus, input[type="password"]:focus {
+input[type="text"]:focus, input[type="password"]:focus, input[type="tel"]:focus {
   border: 1px solid var(--black);
 }
 
