--- a/client/css/a11y.css
+++ b/client/css/a11y.css
@@ -1,6 +1,5 @@
 /* Accessibility Styles */
-.a11y_hidden,
-legend {
+.a11y_hidden, legend {
   overflow: hidden;
   position: absolute !important;
   clip: rect(0, 0, 0, 0);
