[chore] 전체 병합을 위한 진행상황 업데이트 3 #55

--- a/client/css/a11y.css
+++ b/client/css/a11y.css
@@ -1,5 +1,6 @@
 /* Accessibility Styles */
-.a11y_hidden, legend {
+.a11y_hidden,
+legend {
   overflow: hidden;
   position: absolute !important;
   clip: rect(0, 0, 0, 0);
