--- a/client/css/common.css
+++ b/client/css/common.css
@@ -81,7 +81,8 @@
   color: var(--purple);
 }
 
-.topbtn_register::after, .topbtn_login::after {
+.topbtn_register::after,
+.topbtn_login::after {
   content: "";
   position: absolute;
   width: 1px;
@@ -238,7 +239,8 @@
   display: block;
   width: 36px;
   height: 36px;
-  background: transparent url("../assets/icons/Icon/location.png") center / 36px no-repeat;
+  background: transparent url("../assets/icons/Icon/location.png") center / 36px 
+  no-repeat;
 }
 
 .location_box {
