[fix] 충돌 해결  #31

--- a/client/css/common.css
+++ b/client/css/common.css
@@ -8,7 +8,8 @@
   margin: 0 auto;
 }
 
-.top_bar, .logo_bar {
+.top_bar,
+.logo_bar {
   display: block;
   margin: 0 6px;
   color: var(--gray-bar);
@@ -79,6 +80,7 @@
 .topbtn_register {
   color: var(--purple);
 }
+
 
 .topbtn_register::after, .topbtn_login::after {
   content: "";
@@ -162,7 +164,8 @@
   margin-left: 6px;
   width: 8px;
   height: 8px;
-  background: transparent url("../assets/icons/Icon/new.png") center / 8px no-repeat;
+  background: transparent url("../assets/icons/Icon/new.png") center / 8px
+    no-repeat;
 }
 
 .search_wrap {
@@ -205,7 +208,8 @@
   right: 20px;
   width: 32px;
   height: 32px;
-  background: transparent url(../assets/icons/Icon/search.png) center / 32px no-repeat;
+  background: transparent url(../assets/icons/Icon/search.png) center / 32px
+    no-repeat;
   vertical-align: bottom;
 }
 
@@ -266,7 +270,8 @@
 }
 
 .icon_heart {
-  background: transparent url("../assets/icons/Icon/heart.png") center / 36px no-repeat;
+  background: transparent url("../assets/icons/Icon/heart.png") center / 36px
+    no-repeat;
   margin: 0 20px;
 }
 
@@ -275,7 +280,8 @@
 }
 
 .icon_cart {
-  background: transparent url("../assets/icons/Icon/cart.png") center / 36px no-repeat;
+  background: transparent url("../assets/icons/Icon/cart.png") center / 36px
+    no-repeat;
 }
 
 .icon_cart:hover {
@@ -336,7 +342,7 @@
   background-color: var(--gray-100);
 }
 
-.category li:hover a {
+.category li:hover a{
   color: var(--purple);
 }
 
@@ -448,12 +454,15 @@
   margin-top: 23px;
 }
 
-.question_kakao, .question_oneOnOne, .question_lot {
+.question_kakao,
+.question_oneOnOne,
+.question_lot {
   display: flex;
   flex-direction: row;
 }
 
-.question_oneOnOne, .question_lot {
+.question_oneOnOne,
+.question_lot {
   margin-top: 23px;
 }
 
