--- a/client/css/reset.css
+++ b/client/css/reset.css
@@ -7,7 +7,8 @@ body *::after {
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
 }
@@ -15,32 +16,60 @@ html, body {
 body {
   font-family: "Pretendard";
   font-weight: normal;
-  background-color:  #ffffff;
+  background-color: #ffffff;
   margin: 0;
   padding: 0;
 }
 
-div, p, ul, li, table, th, td, textarea, input, span, form, h1, h2, h3, h4, h5, h6, dt, dl, dd, em, sup{
-  padding:0;
-  margin:0;
+div,
+p,
+ul,
+li,
+table,
+th,
+td,
+textarea,
+input,
+span,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+dt,
+dl,
+dd,
+em,
+sup {
+  padding: 0;
+  margin: 0;
 }
 
-form, fieldset, p {
-  margin:0;
-  padding:0;
-  border:0;
+form,
+fieldset,
+p {
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
 
-ul, ol, dl, dd, dt, li {
+ul,
+ol,
+dl,
+dd,
+dt,
+li {
   list-style-type: none;
   margin: 0;
-  padding:0;
+  padding: 0;
 }
 
 img {
-  border:0;
-  vertical-align:middle;
-  outline:none;
+  border: 0;
+  vertical-align: middle;
+  outline: none;
 }
 
 button {
@@ -69,6 +98,7 @@ input:focus {
   outline: none;
 }
 
+
 input[type="text"]:focus, input[type="password"]:focus, input[type="tel"]:focus {
   border: 1px solid var(--black);
 }
@@ -79,12 +109,14 @@ input[type="search"] {
 }
 
 input::-ms-clear,
-input::-ms-reveal{
-	display:none;width:0;height:0;
+input::-ms-reveal {
+  display: none;
+  width: 0;
+  height: 0;
 }
 input::-webkit-search-decoration,
 input::-webkit-search-cancel-button,
 input::-webkit-search-results-button,
-input::-webkit-search-results-decoration{
-	-webkit-appearance: none;
+input::-webkit-search-results-decoration {
+  -webkit-appearance: none;
 }
