--- a/client/css/reset.css
+++ b/client/css/reset.css
@@ -98,8 +98,9 @@ input:focus {
   outline: none;
 }
 
-
-input[type="text"]:focus, input[type="password"]:focus, input[type="tel"]:focus {
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="tel"]:focus {
   border: 1px solid var(--black);
 }
 
@@ -120,3 +121,4 @@ input::-webkit-search-results-button,
 input::-webkit-search-results-decoration {
   -webkit-appearance: none;
 }
+
