--- a/client/css/juhee.css
+++ b/client/css/juhee.css
@@ -32,7 +32,7 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  background: url(../assets/popup_beauty/popup_img.png) no-repeat 0 0 / cover;
+  background: url(../assets/popup_beauty/popup-img.webp) no-repeat 0 0 / cover;
 }
 .popup_container button {
   width: 50%;
@@ -345,7 +345,7 @@ body {
   width: 1050px;
   margin: 40px auto;
   height: 140px;
-  background: url(../assets/banner/line-banner\ 1.png) no-repeat 0 0 / cover;
+  background: url(../assets/banner/line-banner.webp) no-repeat 0 0 / cover;
 }
 
 /* 최근 본 상품 */
