[chore] width 값이 줄어들 때 레이아웃 겹치는 문제 해결 #54

--- a/client/css/juhee.css
+++ b/client/css/juhee.css
@@ -397,3 +397,9 @@ body {
   background: url(../assets/icons/main/Arrow-recent-products.svg) no-repeat;
   transform: scaleY(-1);
 }
+
+@media (max-width: 1250px){
+  .recent_products {
+    display: none;
+}
+}
